--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
                 <img src="img/foto.jpg" border="1" alt="Фотокарточка"/>
             </div>
             <p>Випускник Львовской Политехники. Ныне бариста в уютном кафе.</p>
-            <p class="style">
+            <p class="style"></p>
                 <h3>Хочу учить фронтенд, потому что:</h3>
                 <ul>
                     <li>Нравится делать что-то интересное и новое</li>
                     <li>Возможность роста</li>
                     <li>Неплохо кормят</li>
                 </ul>
-                <p class="style">
+                <p class="style"></p>
                     <h3>Мой контактный телефон:</h3>
                     <ul>
                         <li class="number">
@@ -33,13 +33,13 @@
                             <a href="https://www.facebook.com/julian.worobyow" target="_blank">Facebook.com</a>
                         </li>
                     </ul>
-                    <p class="style">
+                    <p class="style"></p>
                         <div>
                             <h3>Мой фидбек:</h3>
                             <ul>
                                 <li class="feedback">Моя цель- создать удобный и красивый сайт для Вас.</li>
                             </ul>
                         </div>
-                    </div>
+                 </div>
                 </body>
             </html>
