homework 3 index.html

--- a/index.html
+++ b/index.html
@@ -1,45 +1,77 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
         <meta charset="utf-8">
-        <title>Кратко про меня</title>
-        <link rel="stylesheet" href="css/style.css" media="screen" title="no title">
-        <style></style>
+        <link rel="stylesheet" href="css/reset.css">
+        <link rel="stylesheet" href="css/style.css">
+        <title>Homework3</title>
     </head>
-    <body>
-        <div class="wrapper">
-            <h1>Воробйов Юлиан Александрович</h1>
-            <div class="image">
-                <img src="img/foto.jpg" border="1" alt="Фотокарточка"/>
-            </div>
-            <p>Випускник Львовской Политехники. Ныне бариста в уютном кафе.</p>
-            <p class="style"></p>
-                <h3>Хочу учить фронтенд, потому что:</h3>
-                <ul>
-                    <li>Нравится делать что-то интересное и новое</li>
-                    <li>Возможность роста</li>
-                    <li>Неплохо кормят</li>
+    <body class="page">
+        <div class="Wrapper">
+            <div class="header">
+                <div class="logo header_logo">
+                    <a href="#" target="_blank"><img class="logo_img" src="img/logo.png" alt="Site-logo"/></a>
+                </div>
+                <ul class="menu header_menu">
+                    <li class="menu_item">
+                        <a class="menu_link header_link link" href="#">Главная</a>
+                    </li>
+                    <li class="menu_item">
+                        <a class="menu_link header_link link" href="#"></a>Товары</li>
+                    <li class="menu_item">
+                        <a class="menu_link header_link link" href="#"></a>О нас</li>
+                    <li class="menu_item">
+                        <a class="menu_link header_link link" href="#"></a>Контакты</li>
                 </ul>
-                <p class="style"></p>
-                    <h3>Мой контактный телефон:</h3>
-                    <ul>
-                        <li class="number">
-                            <a href="tel:+380937813547">+380937813547</a>
+                <div class="content">
+                    <ul class="side_nav">
+                        <li class="side-nav_item">
+                            <a class="side-nav_link link">Ноутбуки</a>
+                        </li>
+                        <li class="side-nav_item">
+                            <a class="side-nav_link link"></a>Планшеты</li>
+                        <li class="side-nav_item">
+                            <a class="side-nav_link link"></a>Телефоны</li>
+                        <li class="side-nav_item">
+                            <a class="side-nav_link link"></a>Бытовая техника</li>
+                        <li class="side-nav_item">
+                            <a class="side-nav_link link"></a>Кухонная техника</li>
+                        <li class="side-nav_item">
+                            <a class="side-nav_link link"></a>Велосипеды</li>
+
+                    </ul>
+
+                </div>
+                <div class="product">
+                    <div class="product_img-wrap">
+                        <img class="img/content.jpg" alt="Bike"/>
+
+                        <p class="product_text">Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні. Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI сторіччя, коли невідомий друкар взяв шрифтову гранку та склав на ній підбірку зразків шрифтів.
+                            "Риба" не тільки успішно пережила п'ять століть, але й прижилася в електронному верстуванні, залишаючись по суті незмінною. Вона популяризувалась в 60-их роках минулого сторіччя завдяки виданню зразків шрифтів Letraset, які містили уривки з Lorem
+                            Ipsum, і вдруге - нещодавно завдяки програмам комп'ютерного верстування на кшталт Aldus Pagemaker, які використовували різні версії Lorem Ipsum.</p>
+                    </div>
+                </div>
+
+                <div class="footer">
+                    <ul class="menu_footer">
+                        <li class="menu_item">
+                            <a class="menu_link footer_link" href="#">Главная</a>
+                        </li>
+                        <li class="menu_item">
+                            <a class="menu_link footer_link" href="#">Товары</a>
+                        </li>
+                        <li class="menu_item">
+                            <a class="menu_link footer_link" href="#">О Нас</a>
+                        </li>
+                        <li class="menu_item">
+                            <a class="menu_link footer_link" href="#">Контакты</a>
                         </li>
                     </ul>
-                    <h3>Мой профиль в Facebook:</h3>
-                    <ul>
-                        <li class="link">
-                            <a href="https://www.facebook.com/julian.worobyow" target="_blank">Facebook.com</a>
-                        </li>
-                    </ul>
-                    <p class="style"></p>
-                        <div>
-                            <h3>Мой фидбек:</h3>
-                            <ul>
-                                <li class="feedback">Моя цель- создать удобный и красивый сайт для Вас.</li>
-                            </ul>
-                        </div>
-                 </div>
-                </body>
-            </html>
+                    <div class="legal">
+                        <p class="legal_text">2014 &copy; All rights reserved</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
+</html>
