--- a/hw5/index.html
+++ b/hw5/index.html
@@ -9,10 +9,8 @@
 </head>
 
 <body class="page">
-
-
     <div class="header">
-        <!---Menu--->
+        <!---Menu-->
         <ul class="menu">
             <li class="menu_item"><a href="" class="menu_link">Meu YouBike</a> </li>
             <li class="menu_item"><a href="" class="menu_link">Vender</a> </li>
@@ -20,13 +18,12 @@
             <li class="menu_item"><a href="" class="menu_link">Contato</a></li>
             <li class="menu_item"><a href="" class="menu_link">Ajuda</a></li>
         </ul>
-
         <div class="offers">
             <a href="" class="offers_link">
                 <img class="offers_img" src="img/offers-icon.png" alt="">Minhas Ofertas
             </a>
         </div>
-        <!---Login--->
+        <!---Login-->
         <div class="active-page login">
             <p class="login_text">Ola!
                 <a href="#" class="login_link">Entrar</a> ou
@@ -34,46 +31,34 @@
             </p>
         </div>
     </div>
-
-    <!---Block wrapper--->
+    <!---Block wrapper-->
     <div class="block-wrapper">
         <h1 class="form-title">Cadastre-se</h1>
-
         <div class="form-block">
-
-            <!---Facebook button--->
+            <!---Facebook button-->
             <div class="facebook-btn">
                 <span class="fa fa-facebook fa-lg facebook-btn__span" aria-hidden="true"></span>
                 <a href="#" class="facebook-btn__link">Log In&nbsp; <span class="facebook-btn__span_view_normal">with&nbsp;</span>Facebook
               <span class="fa fa-angle-right fa-lg facebook-btn__link-span"></span>
             </a>
             </div>
-
-
-
-
-
-            <!---separator---->
+            <!---separator-->
             <p class="separator">OU</p>
-
-            <!---Form---->
-
+            <!---Form-->
             <form class="reg-form" action="#" method="post">
                 <input type="text" name="first_name" id="f_name" class="reg-form__input" required placeholder="First Name">
                 <input type="text" name="last_name" id="l_name" class="reg-form__input" required placeholder="Last Name">
                 <input type="email" name="user_email" id="email" class="reg-form__input" required placeholder="Email Address">
                 <input type="password" name="password" id="pass" class="reg-form__input" required placeholder="Choose Password">
                 <input type="password" name="password-check" id="pass-check" class="reg-form__input" required placeholder="Password Confirm">
-
                 <label class="reg-form__label">
-                        <input type="checkbox" name="send-updates" id="updates">
-                        Send me Youbike updates and tips
-                    </label>
+                    <input type="checkbox" name="send-updates" id="updates"> Send me Youbike updates and tips
+                </label>
                 <input type="submit" value="Create my Account" id="create-btn" class="reg-form__button reg-form__submit">
-
                 <p class="reg-form__terms">By clicking the button above, you agree to the Terms of Service Xiew our Privacy Policy.</p>
             </form>
         </div>
 </body>
 <script src="https://use.fontawesome.com/45ad62a50d.js"></script>
+
 </html>
