--- a/hw5/index.html
+++ b/hw5/index.html
@@ -60,5 +60,7 @@
         </div>
 </body>
 <script src="https://use.fontawesome.com/45ad62a50d.js"></script>
-
+<script>
+    document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
+    </script>
 </html>
