--- a/7-8/index.html
+++ b/7-8/index.html
@@ -27,7 +27,7 @@
             </header>
             <div class="substrate-slider">
                 <div class="slider">
-                    <a class="slider-button left-button" href=""></a>
+                    <!-- <a class="slider-button left-button" href=""></a> -->
                     <div class="slider-content">
                         <h1 class="slider__large-title">Lorem Ipsum Dolor</h1>
                         <h2 class="slider__small-title">it will make all of your dreams come true</h2>
@@ -36,30 +36,27 @@
                     <div class="slider-image">
                         <img src="img/iphone.png" alt="iphone">
                     </div>
-                    <a class="slider-button right-button" href="#"></a>
+                    <!-- <a class="slider-button right-button" href="#"></a> -->
+                    <div class="slider__nav">
+                        <a href=""><img src="img/marker2.png"></a>
+                    </div>
                 </div>
-            </div>
-            <div class="slider__nav">
-                <a href=""><img src="img/marker2.png"></a>
             </div>
         </div>
         <div class="substrate__color_gradient">
             <div class="first-section">
                 <div class="cell first-cell">
-                    <img src="img/icons.png">
                     <h1 class="cell-title">About our company</h1>
                     <p class="description-company">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam</p>
                     <a class="more-info" href="#"><span>read more</span></a>
                 </div>
                 <div class="cell second-cell">
-                    <img src="img/icons.png">
                     <h1 class="cell-title">About our company</h1>
                     <p class="description-company">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae
                     </p>
                     <a class="more-info" href="#"><span>read more</span></a>
                 </div>
                 <div class="cell third-cell">
-                    <img src="img/icons.png">
                     <h1 class="cell-title">About our company</h1>
                     <p class="description-company">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam
                     </p>
